# src/main/resources/api/produit.swagger.yaml
@@ -7,7 +7,7 @@ servers:
   - url: http://localhost:8080/api
 
 tags:
-  - name: Produit
+  - name: Produits
     description: Gestion des produits
 
 paths:
@@ -271,8 +271,8 @@ components:
       type: object
       properties:
         idProduit:
-          type: long
-#          format: int64
+          type: integer
+          format: int64
         nomProduit:
           type: string
           example: Laptop
